Created attachment 40367 [details] Sample document for original report Checked with with "LibreOffice 3.3.0Beta3 - WIN XP DE [OOO330m9 (build 3.2.99.2)]" Steps to reproduce: 1. open attached "sample.ods" 2. click filter button for coumn type 3. Select "Standard Filter -> Value expected: Scroll slider remains visible actual: Scroll slider becomes invisible Also visible in my OOo 3.1 and OOo-Dev 3.4
Rainer, by "scroll slider" are you talking about the zoom slider at the right end of the status bar, or the horizontal or vertical scroll bar of the sheet area?
Vertical scroll slider! I can contribute a screenshot if required.
Ah, never mind, I got it. It's the pull-down list box on the standard filter dialog.
Let me take a look at this one.
Ok. Now the dropdown popups of the Values combo boxes won't get automatically resized, and will be horizontally scrollable with the scroll bar at the bottom. Fixed on the libreoffice-3-3 branch. The fix will be included in the next beta of 3.3.
Verified - Closed - Sophie